# niwrap

./: .gitignore  .gitmodules  README.md  build.py  niwrap.html  update_readme.py
.github/: dependabot.yml
extraction/: README.md  applist_common.py
python/: README.md
schemas/: README.md  app.schema.json  descriptor.schema.json  glossary.schema.json  package.schema.json  project.schema.json  projects.schema.json  schemas.json  version.schema.json
scripts/: add_missing_value_keys.py
src/: projects.json
tests/: test_command_line.py  (+6 more)
tooling/: .gitignore  .pre-commit-config.yaml  README.md  compile.sh  pyproject.toml
tooling/build-templates/python/: README-template.md
tooling/hub-embed/: README.md  build-embeddings.mjs  package-lock.json  package.json
tooling/hub-gate/: README.md  gate.mjs  package-lock.json  package.json
tooling/og/: .gitignore  README.md  build_og.py
tooling/src/wrap/: catalog.py  catalog_niwrap.py  cli.py  utils.py
tooling/src/wrap/apps/: find_niwrap.py
tooling/src/wrap/apps/check_container/: __init__.py
tooling/src/wrap/apps/hub_build/: __init__.py
tooling/src/wrap/apps/scripts/: rename_descriptors_to_name_field.py  update_metadata_from_packages.py
tooling/src/wrap/apps/sync/: __init__.py  build_coverage_table_old.py  markdown_utils.py  update_readme_old.py
tooling/src/wrap/apps/test/: __init__.py  test.py
tooling/src/wrap/apps/test/boutiques/: test_command_line.py  test_optional_default_value.py  test_path_template.py  test_schema.py  test_value_keys.py
tooling/tests/: test_dummy.py  test_hub_build.py
(+5940 files in other folders)
