[project]
name = "wrap"
version = "0.1.0"
description = "NiWrap repo tooling"
authors = [
  {name = "CMI DAIR", email = "dair@childmind.org"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "boutiques-schema-pydantic",
  "pytest>=9.0.2",
  "styx",
]

[project.scripts]
wrap = "wrap.cli:main"

[dependency-groups]
dev = [
  "pytest>=9.0.1",
  "mypy>=1.13.0",
  "pre-commit>=4.0.1",
  "pytest-cov>=7.0.0",
  "ruff>=0.8.1"
]
docs = ["pdoc>=15.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[tool.uv.sources]
boutiques-schema-pydantic = {git = "https://github.com/styx-api/boutiques-schema-pydantic.git"}
styx = {git = "https://github.com/styx-api/styx.git"}

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
